test_errors.txt
   Compiling flash-search v0.2.0 (E:\findall)
warning: unused import: `super::*`
  --> src\parsers\docx.rs:33:9
   |
33 |     use super::*;
   |         ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `app`
   --> src\iced_ui\mod.rs:628:17
    |
628 | fn subscription(app: &App) -> Subscription<Message> {
    |                 ^^^ help: if this is intentional, prefix it with an underscore: `_app`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no function or associated item named `new` found for struct `IndexManager` in the current scope
   --> src\watcher.rs:250:46
    |
250 |         let indexer = Arc::new(IndexManager::new(temp.path()).unwrap());
    |                                              ^^^ function or associated item not found in `IndexManager`
    |
   ::: src\indexer\mod.rs:34:1
    |
 34 | pub struct IndexManager {
    | ----------------------- function or associated item `new` not found for this struct
    |
note: if you're trying to build a new `IndexManager`, consider using `IndexManager::open` which returns `std::result::Result<IndexManager, error::FlashError>`
   --> src\indexer\mod.rs:43:5
    |
 43 |     pub fn open(index_path: &Path, memory_limit_mb: u32) -> Result<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `new`, perhaps you need to implement one of them:
            candidate #1: `Highlighter`
            candidate #2: `ahash::HashMapExt`
            candidate #3: `ahash::HashSetExt`
            candidate #4: `aligned_vec::Alignment`
            candidate #5: `bitpacking::BitPacker`
            candidate #6: `calamine::Reader`
            candidate #7: `crypto_common::KeyInit`
            candidate #8: `crypto_common::KeyIvInit`
            candidate #9: `digest::VariableOutput`
            candidate #10: `digest::core_api::VariableOutputCore`
            candidate #11: `digest::digest::Digest`
            candidate #12: `digest::mac::Mac`
            candidate #13: `iced::Executor`
            candidate #14: `iced::widget::shader::Pipeline`
            candidate #15: `iced_core::renderer::Headless`
            candidate #16: `iced_graphics::compositor::Compositor`
            candidate #17: `itertools::adaptors::coalesce::CountItem`
            candidate #18: `notify::Watcher`
            candidate #19: `parking_lot_core::thread_parker::ThreadParkerT`
            candidate #20: `rand::distr::uniform::UniformSampler`
            candidate #21: `rand::distributions::uniform::UniformSampler`
            candidate #22: `read_fonts::tables::variations::TupleDelta`
            candidate #23: `rustybuzz::hb::set_digest::hb_set_digest_ext`
            candidate #24: `typenum::marker_traits::Bit`
            candidate #25: `wgpu::dispatch::InstanceInterface`
            candidate #26: `zip::read::magic_finder::FinderDirection`

error[E0599]: no function or associated item named `new` found for struct `MetadataDb` in the current scope
   --> src\watcher.rs:251:45
    |
251 |         let metadata = Arc::new(MetadataDb::new(temp.path()).unwrap());
    |                                             ^^^ function or associated item not found in `MetadataDb`
    |
   ::: src\metadata\db.rs:54:1
    |
 54 | pub struct MetadataDb {
    | --------------------- function or associated item `new` not found for this struct
    |
note: if you're trying to build a new `MetadataDb`, consider using `MetadataDb::open` which returns `std::result::Result<MetadataDb, error::FlashError>`
   --> src\metadata\db.rs:61:5
    |
 61 |     pub fn open(db_path: &Path) -> Result<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `new`, perhaps you need to implement one of them:
            candidate #1: `Highlighter`
            candidate #2: `ahash::HashMapExt`
            candidate #3: `ahash::HashSetExt`
            candidate #4: `aligned_vec::Alignment`
            candidate #5: `bitpacking::BitPacker`
            candidate #6: `calamine::Reader`
            candidate #7: `crypto_common::KeyInit`
            candidate #8: `crypto_common::KeyIvInit`
            candidate #9: `digest::VariableOutput`
            candidate #10: `digest::core_api::VariableOutputCore`
            candidate #11: `digest::digest::Digest`
            candidate #12: `digest::mac::Mac`
            candidate #13: `iced::Executor`
            candidate #14: `iced::widget::shader::Pipeline`
            candidate #15: `iced_core::renderer::Headless`
            candidate #16: `iced_graphics::compositor::Compositor`
            candidate #17: `itertools::adaptors::coalesce::CountItem`
            candidate #18: `notify::Watcher`
            candidate #19: `parking_lot_core::thread_parker::ThreadParkerT`
            candidate #20: `rand::distr::uniform::UniformSampler`
            candidate #21: `rand::distributions::uniform::UniformSampler`
            candidate #22: `read_fonts::tables::variations::TupleDelta`
            candidate #23: `rustybuzz::hb::set_digest::hb_set_digest_ext`
            candidate #24: `typenum::marker_traits::Bit`
            candidate #25: `wgpu::dispatch::InstanceInterface`
            candidate #26: `zip::read::magic_finder::FinderDirection`

warning: unused variable: `memory_limit_mb`
  --> src\indexer\writer.rs:43:31
   |
43 |     pub fn new(index: &Index, memory_limit_mb: u32) -> Result<Self> {
   |                               ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_memory_limit_mb`

warning: method `state` is never used
   --> src\iced_ui\mod.rs:214:8
    |
131 | impl App {
    | -------- method in this implementation
...
214 |     fn state(&self) -> Option<&Arc<AppState>> {
    |        ^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `subscription` is never used
   --> src\iced_ui\mod.rs:628:4
    |
628 | fn subscription(app: &App) -> Subscription<Message> {
    |    ^^^^^^^^^^^^

warning: function `error_view` is never used
   --> src\iced_ui\mod.rs:647:4
    |
647 | fn error_view(error: &str) -> Element<'_, Message> {
    |    ^^^^^^^^^^

warning: field `schema` is never read
   --> src\indexer\searcher.rs:100:5
    |
 97 | pub struct IndexSearcher {
    |            ------------- field in this struct
...
100 |     schema: Schema,
    |     ^^^^^^

warning: fields `indexer`, `metadata_db`, and `runtime_handle` are never read
  --> src\watcher.rs:22:5
   |
20 | pub struct WatcherManager {
   |            -------------- fields in this struct
21 |     watcher: Option<RecommendedWatcher>,
22 |     indexer: Arc<IndexManager>,
   |     ^^^^^^^
23 |     metadata_db: Arc<MetadataDb>,
   |     ^^^^^^^^^^^
24 |     runtime_handle: tokio::runtime::Handle,
   |     ^^^^^^^^^^^^^^

warning: hiding a lifetime that's elided elsewhere is confusing
   --> src\iced_ui\mod.rs:640:14
    |
640 | fn view(app: &App) -> Element<Message> {
    |              ^^^^     ^^^^^^^^^^^^^^^^ the same lifetime is hidden here
    |              |
    |              the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
    = note: `#[warn(mismatched_lifetime_syntaxes)]` on by default
help: use `'_` for type paths
    |
640 | fn view(app: &App) -> Element<'_, Message> {
    |                               +++

warning: hiding a lifetime that's elided elsewhere is confusing
  --> src\iced_ui\search.rs:19:25
   |
19 | fn load_icon(icon_name: &str) -> iced::widget::Svg {
   |                         ^^^^     ^^^^^^^^^^^^^^^^^ the same lifetime is hidden here
   |                         |
   |                         the lifetime is elided here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
   |
19 | fn load_icon(icon_name: &str) -> iced::widget::Svg<'_> {
   |                                                   ++++

warning: hiding a lifetime that's elided elsewhere is confusing
  --> src\iced_ui\search.rs:32:25
   |
32 | pub fn search_view(app: &App) -> Element<Message> {
   |                         ^^^^     ^^^^^^^^^^^^^^^^ the same lifetime is hidden here
   |                         |
   |                         the lifetime is elided here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
   |
32 | pub fn search_view(app: &App) -> Element<'_, Message> {
   |                                          +++

warning: hiding a lifetime that's elided elsewhere is confusing
 --> src\iced_ui\settings.rs:5:27
  |
5 | pub fn settings_view(app: &App) -> Element<Message> {
  |                           ^^^^     ^^^^^^^^^^^^^^^^ the same lifetime is hidden here
  |                           |
  |                           the lifetime is elided here
  |
  = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
  |
5 | pub fn settings_view(app: &App) -> Element<'_, Message> {
  |                                            +++

For more information about this error, try `rustc --explain E0599`.
warning: `flash-search` (lib test) generated 3 warnings (2 duplicates)
error: could not compile `flash-search` (lib test) due to 2 previous errors; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `flash-search` (lib) generated 11 warnings (run `cargo fix --lib -p flash-search` to apply 6 suggestions)
